розбивка по scss

--- a/css/styles.css
+++ b/css/styles.css
@@ -939,6 +939,7 @@ label.modal-form-check-accept {
   flex-basis: 322px;
 }
 /*переходи і анімація*/
+/*
 .owerbox {
   display: inline-block;
   position: relative;
