--- a/css/main.css
+++ b/css/main.css
@@ -494,7 +494,7 @@ h1 {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.1;
-  color: var(--title-text-color);
+  color: #212121;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -510,10 +510,10 @@ h1 {
   align-items: center;
   width: 170px;
   height: 92px;
-  fill: var(--border-clients);
-  border: 1px solid var(--border-clients);
+  fill: #afb1b8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: transform var(--transition);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: fill, border;
 }
 
