--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 1.1;
-    color: var(--title-text-color);
+    color: $title-text-color;
     text-align: center;
     margin-bottom: 50px;
   }
@@ -24,10 +24,10 @@
     align-items: center;
     width: 170px;
     height: 92px;
-    fill: var(--border-clients);
-    border: 1px solid var(--border-clients);
+    fill: $border-clients;
+    border: 1px solid $border-clients;
     border-radius: 4px;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: fill, border;
   }
   .r-item:not(:last-child) {
@@ -36,7 +36,7 @@
   
   .partner-nav:hover,
   .partner-nav:focus {
-    fill: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    fill: $accent-color;
+    border: 1px solid $accent-color;
   }
   
