--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
     text-decoration: none;
     font-size: 14px;
     line-height: 1.7;
-    background-color: var(--same-section-color);
+    background-color: $same-section-color;
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -13,7 +13,7 @@
     font-size: 26px;
     line-height: 1.1;
     text-decoration: none;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
   }
   .footer > a {
     margin-bottom: 0px;
@@ -31,7 +31,7 @@
   }
   .address-list {
     font-style: normal;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
     font-style: regular;
     font-size: 14px;
     line-height: 1.1;
@@ -69,7 +69,7 @@
     line-height: 1.1;
     text-decoration: none;
     font-style: normal;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
     font-size: 14px;
     margin-bottom: 20px;
   }
@@ -89,7 +89,7 @@
     height: 44px;
     fill: #fff;
     box-shadow: inset 0 0 10px 5px rgba(255, 255, 255, 0.1);
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: background;
   }
   
@@ -99,7 +99,7 @@
   
   .us-nav:hover,
   .us-nav:focus {
-    background: var(--accent-color);
+    background: $accent-color;
   }
   
   .icon-us {
@@ -129,7 +129,7 @@
     line-height: 1.1;
     text-decoration: none;
     font-style: normal;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
     font-size: 14px;
     margin-bottom: 20px;
   }
@@ -168,7 +168,7 @@
     padding: 10px 28px;
     margin: 0px;
     position: relative;
-    background-color: var(--accent-color);
+    background-color: $accent-color;
     color: #fff;
     font-family: "Roboto", sans-serif;
     font-weight: bold;
