--- a/sass/layout/_header-nav.scss
+++ b/sass/layout/_header-nav.scss
@@ -19,7 +19,7 @@
   display: block;
 }
 .n-item-color {
-  color: var(--title-text-color);
+  color: $title-text-color;
 }
 
 .icon-envelope-h {
@@ -31,11 +31,11 @@
   background-repeat: no-repeat;
   background-position: center;
   fill: currentColor;
-  transition: transform var(--transition);
+  transition: transform $transition;
   transition-property: fill;
 }
 .icon-envelope-h:hover {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .icon-smartphone-h {
@@ -48,11 +48,11 @@
   background-repeat: no-repeat;
   background-position: center;
   fill: currentColor;
-  transition: transform var(--transition);
+  transition: transform $transition;
   transition-property: fill;
 }
 .icon-smartphone-h:hover {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .contacts {
@@ -60,27 +60,27 @@
 }
 
 .list.link {
-  color: var(--primery-text-color);
+  color: $primery-text-color;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
-  transition: transform var(--transition);
+  transition: transform $transition;
   transition-property: color;
 }
 .link:hover,
 .link:focus,
 .link.current {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 .link.n-item-color,
 .link.auth-nav {
   display: flex;
   align-items: center;
-  transition: color var(--transition);
+  transition: color $transition;
 }
 .auth-nav {
-  color: var(--primery-text-color);
+  color: $primery-text-color;
 }
 
 /*підкреслювання активної сторінки, додатковий клас menu*/
@@ -98,6 +98,6 @@
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
   margin-bottom: -30px;
 }
