--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -5,7 +5,7 @@
     font-size: 26px;
     line-height: 1.1;
     text-decoration: none;
-    color: var(--accent-color);
+    color: $accent-color;
   }
   .logo .logo-text-second {
     font-family: "Ralwey", sans-serif;
@@ -13,5 +13,5 @@
     font-size: 26px;
     line-height: 1.1;
     text-decoration: none;
-    color: var(--brand-color);
+    color: $brand-color;
   }
