--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -6,7 +6,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity var(--transition), visibility var(--transition);
+    transition: opacity $transition, visibility $transition;
   }
   .modal-content {
     position: relative;
@@ -16,7 +16,7 @@
     max-width: 528px;
     width: 100%;
     max-height: 581px;
-    background-color: var(--primery-br-color);
+    background-color: $primery-br-color;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -27,7 +27,7 @@
     position: absolute;
     top: 8px;
     right: 8px;
-    background-color: var(--primery-br-color);
+    background-color: $primery-br-color;
     color: #000;
     width: 30px;
     height: 30px;
@@ -36,14 +36,14 @@
     align-items: center;
     justify-content: center;
     padding: 6px;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: color;
   }
   
   
   .btnclose:hover,
   .btnclose:focus{
-    color: var(--accent-color);
+    color: $accent-color;
   }
   
   .modal-button-close-icon {
@@ -53,13 +53,13 @@
     align-items: center;
     justify-content: center;
     fill: currentColor;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: fill;
   }
   
   .modal-button-close-icon:hover,
   .modal-button-close-icon:focus {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   
   .modal.is-hidden {
@@ -83,7 +83,7 @@
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--link-color);
+    color: $link-color;
   }
   .modal-form-input input{
     display: none;
@@ -96,21 +96,21 @@
     outline: none;
     padding-left: 42px;
     margin-right: 0px;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: fill, border-color;
   }
   .modal-form-input:focus {
-    border-color: var(--accent-color);
+    border-color: $accent-color;
   }
   .modal-form-input:focus + .modal-form-icon {
-    fill: var(--accent-color);
+    fill: $accent-color;
   }
   .modal-form-input:required:focus:valid {
-    border-color: var(--accent-color);
-    fill: var(--accent-color);
+    border-color: $accent-color;
+    fill: $accent-color;
   }
   .modal-form-text:focus{
-    border-color: var(--accent-color);
+    border-color: $accent-color;
   }
   .modal-form-field {
     display: inline-block;
@@ -118,7 +118,7 @@
     font-size: 12px;
     line-height: 1.1;
     letter-spacing: 0.01em;
-    color: var(--primery-text-color);
+    color: $primery-text-color;
     position: relative;
   }
   .modal-form-icon {
@@ -145,7 +145,7 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: border-color;
   }
   .modal-form-text::placeholder {
@@ -168,12 +168,12 @@
     
     border-radius: 4px;
     outline: none;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: border-color, background-image;
   }
   
   .modal-form-check:focus + .modal-form-check-wrap{
-    border-color: var(--accent-color);
+    border-color: $accent-color;
     
   }
   .modal-form-check:checked + .modal-form-check-wrap {
@@ -189,7 +189,7 @@
   }
   .modal-form-btn {
     align-self: center;
-    background: var(--accent-color);
+    background: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
@@ -198,10 +198,10 @@
     line-height: 1.8;
     cursor: pointer;
     padding: 10px 55px;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
     margin-top: 30px;
   }
   .modal-form-check-info {
-    color: var(--accent-color);
+    color: $accent-color;
     text-decoration: underline;
   }
