--- a/sass/layout/_portfolio-buttons.scss
+++ b/sass/layout/_portfolio-buttons.scss
@@ -5,7 +5,7 @@
     margin-bottom: 34px;
   }
   .button-item {
-    background: var(--button-nav-color);
+    background: $button-nav-color;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -15,7 +15,7 @@
     border: none;
     cursor: pointer;
     padding: 6px 22px;
-    transition: transform var(--transition);
+    transition: transform $transition;
     transition-property: color, background, box-shadow;
   }
   
@@ -24,8 +24,8 @@
   }
   .button-item:hover,
   .button-item:focus {
-    color: var(--primery-br-color);
-    background: var(--accent-color);
+    color: $primery-br-color;
+    background: $accent-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
