--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -10,7 +10,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 1.1;
-    color: var(--title-text-color);
+    color: $title-text-color;
     text-align: center;
     margin-bottom: 50px;
   }
@@ -28,9 +28,9 @@
   }
   .box {
     width: 270px;
-    border-right: var(--border);
-    border-bottom: var(--border);
-    border-left: var(--border);
+    border-right: $border;
+    border-bottom: $border;
+    border-left: $border;
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
@@ -49,14 +49,14 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.1;
-    color: var(--title-text-color);
+    color: $title-text-color;
     margin: 0px;
   }
   .team .text .position {
     font-size: 16px;
     line-height: 1.1;
-    color: var(--primery-text-color);
-    box-shadow: var(--box-shadow-team);
+    color: $primery-text-color;
+    box-shadow: $box-shadow-team;
   }
   .social-list {
     display: flex;
@@ -71,14 +71,14 @@
     border-radius: 50%;
     width: 44px;
     height: 44px;
-    fill: var(--border-clients);
-    transition: transform var(--transition);
+    fill: $border-clients;
+    transition: transform $transition;
     transition-property: fill, background;
   }
   .social-nav:hover,
   .social-nav:focus {
     fill: #ffffff;
-    background: var(--accent-color);
+    background: $accent-color;
   }
   
   .soc-item:not(:last-child) {
