--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 1.1;
-    color: var(--title-text-color);
+    color: $title-text-color;
     text-align: center;
     margin-bottom: 50px;
   }
@@ -45,6 +45,6 @@
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--primery-br-color);
+    color: $primery-br-color;
     margin: 0px;
   }
