--- a/sass/layout/_header-nav.scss
+++ b/sass/layout/_header-nav.scss
@@ -33,9 +33,9 @@
   fill: currentColor;
   transition: transform $transition;
   transition-property: fill;
-}
-.icon-envelope-h:hover {
-  fill: $accent-color;
+    &:hover {
+      fill: $accent-color;
+    }
 }
 
 .icon-smartphone-h {
@@ -50,11 +50,10 @@
   fill: currentColor;
   transition: transform $transition;
   transition-property: fill;
+  &:hover {
+    fill: $accent-color;
+  }
 }
-.icon-smartphone-h:hover {
-  fill: $accent-color;
-}
-
 .contacts {
   margin-left: auto;
 }
@@ -77,7 +76,7 @@
 .link.auth-nav {
   display: flex;
   align-items: center;
-  transition: color $transition;
+  transition: $transition;
 }
 .auth-nav {
   color: $primery-text-color;
@@ -88,16 +87,17 @@
 .link.n-item-color.current {
   position: relative;
   display: block;
+  &.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: $accent-color;
+    margin-bottom: -30px;
+  }
 }
-.link.n-item-color.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: $accent-color;
-  margin-bottom: -30px;
-}
+
