--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -30,24 +30,11 @@
   }
   
   .button-hero {
-    color: $primery-br-color;
-    background: $accent-color;
-    font-family: inherit;
-    font-size: 16px;
-    line-height: 1.8;
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.15);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    min-width: 210px;
-    height: 50px;
-    padding: 10px 32px;
-    transition: transform $transition;
-    transition-property: text-shadow, background-color;
+    @extend %button;
+      &:hover,
+      &:focus {
+        text-shadow: $bottom-hero-shaddow;
+        background-color: $bottom-hero-hover;
+      }
   }
-  .button-hero:hover,
-  .button-hero:focus {
-    text-shadow: $bottom-hero-shaddow;
-    background-color: $bottom-hero-hover;
-  }
+ 
