--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -20,32 +20,9 @@
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
+      @extend %btnclose-modal;
   }
-  
-  .btnclose {
-    display: inline-flex;
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    background-color: $primery-br-color;
-    color: #000;
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    padding: 6px;
-    transition: transform $transition;
-    transition-property: color;
-  }
-  
-  
-  .btnclose:hover,
-  .btnclose:focus{
-    color: $accent-color;
-  }
-  
+    
   .modal-button-close-icon {
     display: flex;
     width: 100%;
@@ -71,10 +48,11 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
+    & > p {
+      margin: 0px 0px 12px 0px;
+    }
   }
-  .modal-form > p {
-    margin: 0px 0px 12px 0px;
-  }
+  
   .modal-title {
     font-family: Roboto;
     font-style: normal;
@@ -147,12 +125,12 @@
     outline: none;
     transition: transform $transition;
     transition-property: border-color;
-  }
-  .modal-form-text::placeholder {
-    font-size: 12px;
-    line-height: 1.1;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+      &::placeholder {
+        font-size: 12px;
+        line-height: 1.1;
+        letter-spacing: 0.01em;
+        color: rgba(117, 117, 117, 0.5);
+      }
   }
   .modal-form-check{
     appearance: none;
@@ -165,7 +143,6 @@
     display: inline-block;
     margin-right: 7px;
     border: 1px solid rgba(33, 33, 33, 0.2);
-    
     border-radius: 4px;
     outline: none;
     transition: transform $transition;
