--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -2,9 +2,9 @@
     background: #f5f4fa;
     padding-top: 94px;
     padding-bottom: 94px;
-  }
-  .name .comand {
-    margin-top: 0px;
+    &.comand {
+      margin-top: 0px;
+    }
   }
   .comand {
     font-weight: bold;
@@ -22,9 +22,9 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  }
-  .t-item:not(:last-child) {
-    margin-right: 30px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
   .box {
     width: 270px;
@@ -35,15 +35,14 @@
     padding-bottom: 30px;
     text-align: center;
     background-color: #ffffff;
-  }
-  .box > h3 {
-    margin-top: 0px;
-    margin-bottom: 10px;
-  }
-  
-  .box > p {
-    margin-top: 0px;
-    margin-bottom: 16px;
+    & > h3 {
+      margin-top: 0px;
+      margin-bottom: 10px;
+    }
+    & > p {
+      margin-top: 0px;
+      margin-bottom: 16px;
+    }
   }
   .team .title .pip {
     font-weight: 500;
@@ -62,23 +61,13 @@
     display: flex;
     justify-content: center;
     margin: 0px;
+      @extend %us-nav;
   }
-  .social-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 50%;
-    width: 44px;
-    height: 44px;
-    fill: $border-clients;
-    transition: transform $transition;
-    transition-property: fill, background;
-  }
-  .social-nav:hover,
-  .social-nav:focus {
-    fill: #ffffff;
-    background: $accent-color;
+ 
+    @extend %us-nav:hover,
+    @extend %us-nav:focus {
+      fill: #ffffff;
+      background: $accent-color;
   }
   
   .soc-item:not(:last-child) {
