--- a/sass/layout/_header-nav.scss
+++ b/sass/layout/_header-nav.scss
@@ -1,28 +1,77 @@
-.main-nav,
-.pages-nav,
-.contacts {
+.main-nav{
   display: flex;
-  align-items: center;
-}
+  align-items: center;}
 
-.pages-nav .n-item:not(:last-child),
-.contacts .a-item:not(:last-child) {
+.main-nav__list{
+      display: flex;
+      align-items: center;
+      margin-left: 93px;
+    }
+.main-nav__item{
+      display: block;
+    }
+.main-nav__link{
+      display: flex;
+      align-items: center;
+      transition: color var(--transition);
+      color: var(--primery-text-color);
+      font-family: "Roboto", sans-serif;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.1;
+      transition: transform var(--transition);
+      transition-property: color;
+    }
+
+.main-nav__item:not(:last-child){
+  display: block;
   margin-right: 50px;
 }
-.pages-nav .n-item {
-  display: block;
-}
-.pages-nav {
-  margin-left: 93px;
-}
-.contacts .a-item {
-  display: block;
-}
-.n-item-color {
-  color: $title-text-color;
-}
+.main-nav__link:hover{
+  color: var(--accent-color);
+  }
+.main-nav__link:focus{
+    color: var(--accent-color);
+    }
 
-.icon-envelope-h {
+.main-nav__link--current {
+  color: var(--accent-color);
+}
+.main-nav__link--current {
+  position: relative;
+  display: block;
+}
+.main-nav__link--current::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  margin-bottom: -30px;
+}
+.contacts__list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+.contacts__item {
+  display: block;
+  
+}
+.contacts__item:not(:last-child) {
+  margin-right: 50px;
+}
+.contacts__link {
+  display: flex;
+  align-items: center;
+  transition: color var(--transition);
+  color: var(--primery-text-color);
+}
+.contacts__icon--envelope-h{
   display: inline-block;
   content: "";
   width: 16px;
@@ -31,14 +80,15 @@
   background-repeat: no-repeat;
   background-position: center;
   fill: currentColor;
-  transition: transform $transition;
+  transition: transform var(--transition);
   transition-property: fill;
-    &:hover {
-      fill: $accent-color;
-    }
+}
+.contacts__icon--envelope-h:hover{
+fill: var(--accent-color);
 }
 
-.icon-smartphone-h {
+
+.contacts__icon--smartphone-h {
   display: inline-block;
   content: "";
   width: 10px;
@@ -48,56 +98,9 @@
   background-repeat: no-repeat;
   background-position: center;
   fill: currentColor;
-  transition: transform $transition;
+  transition: transform var(--transition);
   transition-property: fill;
-  &:hover {
-    fill: $accent-color;
-  }
 }
-.contacts {
-  margin-left: auto;
+.contacts__icon--smartphone-h:hover {
+  fill: var(--accent-color);
 }
-
-.list.link {
-  color: $primery-text-color;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  transition: transform $transition;
-  transition-property: color;
-}
-.link:hover,
-.link:focus,
-.link.current {
-  color: $accent-color;
-}
-.link.n-item-color,
-.link.auth-nav {
-  display: flex;
-  align-items: center;
-  transition: $transition;
-}
-.auth-nav {
-  color: $primery-text-color;
-}
-
-/*підкреслювання активної сторінки, додатковий клас menu*/
-
-.link.n-item-color.current {
-  position: relative;
-  display: block;
-  &.current::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $accent-color;
-    margin-bottom: -30px;
-  }
-}
-
