--- a/sass/layout/main.scss
+++ b/sass/layout/main.scss
@@ -2,6 +2,7 @@
 @import '../utils/vars';
 @import '../base/common';
 @import '../layout/page-header';
+@import '../layout/logo';
 @import '../layout/header-nav';
 @import '../layout/hero-section';
 @import '../layout/feature-section';
