--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -26,7 +26,7 @@
   .adds {
     display: inline-block;
     position: relative;
-    .thumb-& {
+    .thumb-adds {
       display: inline-block;
       position: absolute;
       bottom: 0px;
@@ -36,7 +36,7 @@
       height: 70px;
       padding: 27px;
     }
-    .work-& {
+    .work-add {
       font-weight: bold;
       font-size: 14px;
       line-height: 1.4;
