--- a/sass/layout/main.scss
+++ b/sass/layout/main.scss
@@ -1,8 +1,11 @@
 @import '../vendor/normalize';
 @import '../utils/vars';
 @import '../base/common';
+@import '../utils/placeholders';
+@import '../utils/mixin';
 @import '../layout/page-header';
 @import '../layout/logo';
+@import '../layout/p-h__container';
 @import '../layout/header-nav';
 @import '../layout/hero-section';
 @import '../layout/feature-section';
