--- a/sass/layout/_feature-section.scss
+++ b/sass/layout/_feature-section.scss
@@ -12,10 +12,10 @@
     display: flex;
     flex-wrap: nowrap;
   }
-  .f-item > h3 {
+  .f-item > .title.subject {
     margin-top: 30px;
     margin-bottom: 10px;
-      & > p {
+      & > .text.subject {
         margin-top: 0px;
         margin-bottom: 0px;
       }
@@ -53,9 +53,7 @@
   }
   
   .title .subject {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.1;
+    @include font(14px, 700, 1.1);
     text-transform: uppercase;
     color: $title-text-color;
   }
