--- a/sass/layout/_header-nav.scss
+++ b/sass/layout/_header-nav.scss
@@ -1,106 +1,103 @@
 .main-nav{
   display: flex;
-  align-items: center;}
-
-.main-nav__list{
+  align-items: center;
+  &__list{
       display: flex;
       align-items: center;
       margin-left: 93px;
     }
-.main-nav__item{
+  &__item{
       display: block;
+      &:not(:last-child){
+        display: block;
+        margin-right: 50px;
+      }
     }
-.main-nav__link{
+  &__link{
+      @include font(14px, 500, 1.1);
       display: flex;
       align-items: center;
       transition: color var(--transition);
       color: var(--primery-text-color);
       font-family: "Roboto", sans-serif;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 1.1;
       transition: transform var(--transition);
       transition-property: color;
+        &:hover{
+          color: var(--accent-color);
+          }
+        &:focus{
+            color: var(--accent-color);
+            }
+        &--current {
+              color: var(--accent-color);
+            }
     }
-
-.main-nav__item:not(:last-child){
-  display: block;
-  margin-right: 50px;
-}
-.main-nav__link:hover{
-  color: var(--accent-color);
   }
-.main-nav__link:focus{
-    color: var(--accent-color);
-    }
 
-.main-nav__link--current {
-  color: var(--accent-color);
-}
 .main-nav__link--current {
   position: relative;
   display: block;
+  &::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    margin-bottom: -30px;
+  }
 }
-.main-nav__link--current::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  margin-bottom: -30px;
-}
+
 .contacts__list {
   display: flex;
   align-items: center;
   margin-left: auto;
-}
-.contacts__item {
-  display: block;
-  
-}
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
-.contacts__link {
-  display: flex;
-  align-items: center;
-  transition: color var(--transition);
-  color: var(--primery-text-color);
-}
-.contacts__icon--envelope-h{
-  display: inline-block;
-  content: "";
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  background-repeat: no-repeat;
-  background-position: center;
-  fill: currentColor;
-  transition: transform var(--transition);
-  transition-property: fill;
-}
-.contacts__icon--envelope-h:hover{
-fill: var(--accent-color);
+    &__item {
+      display: block;
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
+    }
+    &__link {
+      display: flex;
+      align-items: center;
+      transition: color var(--transition);
+      color: var(--primery-text-color);
+    }
+    &__icon--envelope-h{
+      display: inline-block;
+      content: "";
+      width: 16px;
+      height: 12px;
+      margin-right: 10px;
+      background-repeat: no-repeat;
+      background-position: center;
+      fill: currentColor;
+      transition: transform var(--transition);
+      transition-property: fill;
+      &:hover{
+        fill: var(--accent-color);
+        }
+    }
+    &__icon--smartphone-h {
+      display: inline-block;
+      content: "";
+      width: 10px;
+      height: 16px;
+      margin-right: 10px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      fill: currentColor;
+      transition: transform var(--transition);
+      transition-property: fill;
+      &:hover {
+        fill: var(--accent-color);
+      }
+    }
 }
 
 
-.contacts__icon--smartphone-h {
-  display: inline-block;
-  content: "";
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  fill: currentColor;
-  transition: transform var(--transition);
-  transition-property: fill;
-}
-.contacts__icon--smartphone-h:hover {
-  fill: var(--accent-color);
-}
