--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -18,11 +18,9 @@
   }
   
   h1 {
+    @include font(44px, 900, 1.3);
     color: #fff;
     font-style: normal;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.3;
     text-transform: uppercase;
     text-align: center;
     margin-top: 0px;
