--- a/sass/layout/_portfolio-buttons.scss
+++ b/sass/layout/_portfolio-buttons.scss
@@ -5,11 +5,9 @@
     margin-bottom: 34px;
   }
   .button-item {
+    @include font(16px, 500,1.6);
     background: $button-nav-color;
     font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
     text-align: center;
     border-radius: 4px;
     border: none;
