--- a/sass/layout/_clients-section.scss
+++ b/sass/layout/_clients-section.scss
@@ -1,38 +1,36 @@
-.vip {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    &.clients {
-      margin-top: 0px;
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;}
+
+.title {
+  @include font(36px, 700, 1.1);
+  color: $title-text-color;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-top: 0px;
+}
+.regular__list {
+    display: flex;
+    justify-content: center;
+  }
+.regular__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  fill: $border-clients;
+  border: 1px solid $border-clients;
+  border-radius: 4px;
+  transition: transform $transition;
+  transition-property: fill, border;
+    &:hover,
+    &:focus {
+      fill: $accent-color;
+      border: 1px solid $accent-color;
     }
   }
-  .clients {
-    @include font(36px, 700, 1.1);
-    color: $title-text-color;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  .regular-list {
-    display: flex;
-    justify-content: center;
-  }
-  .partner-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 92px;
-    fill: $border-clients;
-    border: 1px solid $border-clients;
-    border-radius: 4px;
-    transition: transform $transition;
-    transition-property: fill, border;
-      &:hover,
-      &:focus {
-        fill: $accent-color;
-        border: 1px solid $accent-color;
-      }
-  }
-  .r-item:not(:last-child) {
+  .regular__item:not(:last-child) {
     margin-right: 30px;
   }
   
