--- a/sass/layout/_p-h__container.scss
+++ b/sass/layout/_p-h__container.scss
@@ -1,8 +1,5 @@
-.page-header__container {
-    @extend %nav-display;
-  }
- /*
-  .page-header .header-nav {
-    display: flex;
-    align-items: center;
-  }*/
+.page--header__container {
+  display: flex;
+  align-items: center;
+}
+ 
