--- a/sass/layout/_portfolio-buttons.scss
+++ b/sass/layout/_portfolio-buttons.scss
@@ -1,30 +1,30 @@
-.buttons-list {
-    display: flex;
-    justify-content: center;
-    margin-top: 0px;
-    margin-bottom: 34px;
-  }
-  .button-item {
-    @include font(16px, 500,1.6);
-    background: $button-nav-color;
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    padding: 6px 22px;
-    transition: transform $transition;
-    transition-property: color, background, box-shadow;
-      &:hover,
-      &:focus {
-        color: $primery-br-color;
-        background: $accent-color;
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+.buttons__list {
+  display: flex;
+  justify-content: center;
+  margin-top: 0px;
+  margin-bottom: 34px;
+}
+.button__item {
+  @include font(16px, 500, 1.6);
+  background: $button-nav-color;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  padding: 6px 22px;
+  transition: transform $transition;
+  transition-property: color, background, box-shadow;
+    &:hover,
+    &:focus {
+      color: $primery-br-color;
+      background: $accent-color;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
           0px 2px 2px rgba(0, 0, 0, 0.12);
-      }
-  }
-  .b-item:not(:last-child) {
-    margin-right: 8px;
-  }
+    }
+}
+.button__item--gap:not(:last-child) {
+  margin-right: 8px;
+}
   
   
