--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -1,51 +1,53 @@
 .work {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    &.disc {
-      margin-top: 0px;
-    }
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.work__subtitle {
+  margin-top: 0px;
+}
+  
+.work__title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.1;
+  color: $title-text-color;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.discription__list {
+  display: flex;
+  margin-top: 50px;
+}
+.discription__item {
+  width: 370px;
+  &:not(:last-child) {
+    margin-right: 30px;
   }
-  .disc {
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 1.1;
-    color: $title-text-color;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  .discription-list {
-    display: flex;
-    margin-top: 50px;
-  }
-  .discription-list .d-item {
-    width: 370px;
-    & .d-item:not(:last-child) {
-      margin-right: 30px;
-    }
-  }
-  .adds {
-    display: inline-block;
-    position: relative;
-    .thumb-adds {
-      display: inline-block;
-      position: absolute;
-      bottom: 0px;
-      overflow: hidden;
-      background: rgba(47, 48, 58, 0.8);
-      width: 370px;
-      height: 70px;
-      padding: 27px;
-    }
-    .work-add {
-      font-weight: bold;
-      font-size: 14px;
-      line-height: 1.4;
-      text-align: center;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      color: $primery-br-color;
-      margin: 0px;
-    }
-  }
+}
+.discription__item--adds {
+  display: inline-block;
+  position: relative;
+}
+.discription__thumb--adds {
+  display: inline-block;
+  position: absolute;
+  bottom: 0px;
+  overflow: hidden;
+  background: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 70px;
+  padding: 27px;
+}
+.discription__title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.4;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $primery-br-color;
+  margin: 0px;
+}
+  
   
  
