--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,4 +1,4 @@
-%btnclose {
+%btnclose-modal {
     display: inline-flex;
     position: absolute;
     top: 8px;
@@ -39,14 +39,13 @@
   }
 
 %logo {
-    display: block;
+    display: inline-block;
     font-family: "Ralwey", sans-serif;
     font-weight: bold;
     font-size: 26px;
     line-height: 1.1;
     text-decoration: none;
-    color: $accent-color;
-  }
+}
   
 %nav-display {
     display: flex;
