--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -13,3 +13,4 @@
     $bottom-hero-shaddow: rgba(0, 0, 0, 0.15);
     $border-clients: rgba(175, 177, 184, 1);
     $transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    $contacts__link--footer: rgba(255, 255, 255, 0.6); 
